--- a/index.html
+++ b/index.html
@@ -62,5 +62,5 @@
     </div>
     <footer class="footer">Подвал</footer>
     <script type="text/javascript" src="index.js"></script>
-  </body>s
+  </body>
 </html>
