--- a/index.html
+++ b/index.html
@@ -18,7 +18,22 @@
         
         <form class="login-form" method="post" >
           <h1 class="form-title">Login</h1>
+
+          <div class="form-control">
+            <label class="form-label" for="userName">Name</label>
+            <input
+              class="form-input"
+              type="userName"
+              name="name"
+              id="userName"
+              required
+            />
+            <span class="error-text error-text_name"></span>
+          </div>
             <div class="form-control">
+
+
+
             <label class="form-label" for="email">Email</label>
             <input
               class="form-input"
