--- a/index.html
+++ b/index.html
@@ -12,66 +12,111 @@
     <div class="conteiner">
       <nav class="navigation">Навигация</nav>
       <main class="content">
-        <div class="modal"> <h2>Welcome!</h2></div>
-        <div class="main-form">
-
+        <div class="modal">
         
-        <form class="login-form" method="post" >
-          <h1 class="form-title">Login</h1>
-
-          <div class="form-control">
-            <label class="form-label" for="userName">Name</label>
-            <input
-              class="form-input"
-              type="userName"
-              name="name"
-              id="userName"
-              required
-            />
-            <span class="error-text error-text_name"></span>
+          <div class="list-item">
+            <h2>list of users</h2>
+            <div class="list-container">
+              <span class="list-email">{email}</span>
+              <button class="list-button">delete</button>
+              <button class="list-button">edit</button>
+            </div>
+            <div class="list-item">
+              <span class="list-email">{email}</span>
+              <button class="list-button">delete</button>
+              <button class="list-button">edit</button>
+            </div>
+            <div class="list-item">
+              <span class="list-email">{email}</span>
+              <button class="list-button">delete</button>
+              <button class="list-button">edit</button>
+            </div>
           </div>
+        </div>
+
+        <div class="main-form"  style="display: block">
+          <form class="login-form" method="post">
+            <h1 class="form-title">registration</h1>
+
             <div class="form-control">
+              <label class="form-label" for="userName">Name</label>
+              <input
+                class="form-input"
+                type="userName"
+                name="name"
+                id="userName"
+                required
+              />
+              <span class="error-text error-text_name"></span>
+            </div>
+            <div class="form-control">
+              <label class="form-label" for="email">Email</label>
+              <input
+                class="form-input"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="name@example.com"
+                required
+              />
+              <span class="error-text error-text_email"></span>
+            </div>
+            <div class="form-control">
+              <label class="form-label" for="password">Password</label>
+              <input
+                class="form-input"
+                type="password"
+                name="password"
+                id="password"
+                required
+              />
+              <span class="error-text error-text_password"></span>
+            </div>
+            <div class="form-control">
+              <label class="form-label" for="password1">Сonfirm password</label>
+              <input
+                class="form-input"
+                type="password"
+                name="password1"
+                id="password1"
+                required
+              />
+              <span class="error-text error-text_password1"></span>
+            </div>
 
-
-
-            <label class="form-label" for="email">Email</label>
-            <input
-              class="form-input"
-              type="email"
-              id="email"
-              name="email"
-              placeholder="name@example.com"
-              required
-            />
-            <span class="error-text error-text_email"></span>
-          </div>
-          <div class="form-control">
-            <label class="form-label" for="password">Password</label>
-            <input
-              class="form-input"
-              type="password"
-              name="password"
-              id="password"
-              required
-            />
-            <span class="error-text error-text_password"></span>
-          </div>
-          <div class="form-control">
-            <label class="form-label" for="password1">Сonfirm password</label>
-            <input
-              class="form-input"
-              type="password"
-              name="password1"
-              id="password1"
-              required
-            />
-            <span class="error-text error-text_password1"></span>
-          </div>
-
-
-          <input class="submit-button"  type="submit" value="Send"/>
+            <input class="submit-button" type="submit" value="Send" />
           </form>
-      </div>
+        </div>
+
+        <div class="main-form-login" style="display: none">
+          <form class="login-form" method="post">
+            <h1 class="form-title">Login</h1>
+            <div class="form-control">
+              <label class="form-label" for="email">Email</label>
+              <input
+                class="form-input"
+                type="email"
+                id="email"
+                name="email"
+                placeholder="name@example.com"
+                required
+              />
+              <span class="error-text error-text_email"></span>
+            </div>
+            <div class="form-control">
+              <label class="form-label" for="password">Password</label>
+              <input
+                class="form-input"
+                type="password"
+                name="password"
+                id="password"
+                required
+              />
+              <span class="error-text error-text_password"></span>
+            </div>
+            <input class="submit-button-login" type="submit" value="Send" />
+          </form>
+        </div>
       </main>
       <aside class="sidebar">Боковая панель</aside>
     </div>
