--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div class="main-form" style="display: block">
           <form class="login-form" method="post">
-            <h3 class="form-title">registration/login</h3>
+            <h3 class="form-title">registration</h3>
 
             <div class="form-control">
               <label class="form-label" for="userName">Name</label>
@@ -77,7 +77,7 @@
           </form>
         </div>
 
-        <!-- <div class="main-form-login" style="display: none">
+        <div class="main-form-login" style="display: none">
           <form class="login-form" method="post">
             <h1 class="form-title">Login</h1>
             <div class="form-control">
@@ -105,7 +105,7 @@
             </div>
             <input class="submit-button-login" type="submit" value="Send" />
           </form>
-        </div> -->
+        </div>
       </main>
       <aside class="sidebar">Боковая панель</aside>
     </div>
