--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="header">Шапка</header>
+    <header class="header">Шапка
+     <button class="button-registration">registration</button>
+     <button class="button-login">login</button>
+    </header>
     <div class="conteiner">
       <nav class="navigation">Навигация</nav>
       <main class="content">
@@ -81,24 +84,24 @@
           <form class="login-form" method="post">
             <h1 class="form-title">Login</h1>
             <div class="form-control">
-              <label class="form-label" for="email">Email</label>
+              <label class="form-label" for="email1">Email</label>
               <input
                 class="form-input"
                 type="email"
-                id="email"
-                name="email"
+                id="email1"
+                name="email1"
                 placeholder="name@example.com"
                 required
               />
               <span class="error-text error-text_email"></span>
             </div>
             <div class="form-control">
-              <label class="form-label" for="password">Password</label>
+              <label class="form-label" for="password2">Password</label>
               <input
                 class="form-input"
                 type="password"
-                name="password"
-                id="password"
+                name="password2"
+                id="password2"
                 required
               />
               <span class="error-text error-text_password"></span>
