--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="form-control">
               <label class="form-label" for="email1">Email</label>
               <input
-                class="form-input"
+                class="form-input-login-email"
                 type="email"
                 id="email1"
                 name="email1"
@@ -98,7 +98,7 @@
             <div class="form-control">
               <label class="form-label" for="password2">Password</label>
               <input
-                class="form-input"
+                class="form-input-login-password"
                 type="password"
                 name="password2"
                 id="password2"
