--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="main-form-login" style="display: none">
-          <form class="login-form" method="post">
+          <form class="login-form-login" method="post">
             <h1 class="form-title">Login</h1>
             <div class="form-control">
               <label class="form-label" for="email1">Email</label>
