--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 placeholder="name@example.com"
                 required
               />
-              <span class="error-text error-text_email"></span>
+              <span class="error-text error-text-login_email"></span>
             </div>
             <div class="form-control">
               <label class="form-label" for="password2">Password</label>
@@ -104,7 +104,7 @@
                 id="password2"
                 required
               />
-              <span class="error-text error-text_password"></span>
+              <span class="error-text error-text-login_password"></span>
             </div>
             <input class="submit-button-login" type="submit" value="Send" />
           </form>
