--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="conteiner">
       <nav class="navigation"></nav>
       <main class="content">
-        <div class="modal">
+        <div class="list-of-usrs">
           <h2>List of users</h2>
           <div class="list-container"></div>
         </div>
