--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <aside class="sidebar"></aside>
     </div>
     <footer class="footer"></footer>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="App.js"></script>
   </body>
 </html>
 
