--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
             <span>Are you sure? <button class="delete-confirmation-btn">Yes</button></span>
           </div>
         </div>
+        <div class="modal-edit" style="display: none" >
+          <div class="modal-content-edit">
+            <h1>редактировать</h1>
+          </div>
+        </div>
+
+
+
 
         <div class="main-form" style="display: block">
           <form class="login-form" method="post">
