--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="modal-edit" style="display: none" >
           <div class="modal-content-edit">
-            <h1>редактировать</h1>
+            <h1 class="total-edit">редактировать</h1>
           </div>
         </div>
 
