--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
       <aside class="sidebar"></aside>
     </div>
     <footer class="footer"></footer>
-    <script type="text/javascript" src="App.js"></script>
+    
+    <script type="module" src="index.js"></script>
   </body>
 </html>
 
