--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="wraper">
     <header class="header">
      <button class="button-registration">registration</button>
      <button class="button-login">login</button>
@@ -123,6 +124,7 @@
     <footer class="footer"></footer>
     
     <script type="module" src="index.js"></script>
+  </div>
   </body>
 </html>
 
