--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@
 
         <div class="modal-edit" style="display: none" >
           <div class="modal-content-edit">
-            <h1 class="total-edit">Редактировать</h1>
-            <div class="form-control">
-              <label class="form-label" for="edit-sex-male">Male</label>
+            <h1 class="total-edit">Edit</h1>
+            <span>Sex</span>
+            <div class="form-control-male">
+              
+               <label class="form-label" for="edit-sex-male">Male</label>
               <input type="radio" name="sex" id="edit-sex-male">
               <label class="form-label" for="edit-sex-famale">Famale</label>
               <input type="radio" name="sex" id="edit-sex-famale">
             </div>
+            <span>Hobby</span>
 
-            <div class="form-control">
+            <div class="form-control-hobby">
               <label class="form-label" for="edit-hobby-sport">Sport</label>
               <input type="checkbox" name="hobby-sport" id="edit-hobby-sport">
               <label class="form-label" for="edit-hobby-films">Films</label>
