--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <label class="form-label" for="email1">Email</label>
                 <input
                   class="form-input-login-email"
-                  type="email"
+                  type="text"
                   id="email1"
                   name="email1"
                   placeholder="name@example.com"
