--- a/index.html
+++ b/index.html
@@ -30,39 +30,40 @@
 
         <div class="modal-edit">
           <div class="modal-content">
-            <form id="form-edit" method="post">
-            <div class="form-control">
-              <label class="form-label" for="edit-sex-male">Male</label>
-              <input type="radio" name="sex" id="edit-sex-male" value="Male" />
-              <label class="form-label" for="edit-sex-famale">Famale</label>
-              <input type="radio" name="sex" id="edit-sex-famale" value="Famele" />
-            </div>
+            <form id="edit-form" method="post">
+              <h1>Редактирование</h1>
+              <div class="form-control">
+                <label class="form-label" for="edit-sex-male">Male</label>
+                <input type="radio" name="sex" id="edit-sex-male" value="Male" />
+                <label class="form-label" for="edit-sex-famale">Famale</label>
+                <input type="radio" name="sex" id="edit-sex-famale" value="Famele" />
+              </div>
 
-            <div class="form-control">
-              <label class="form-label" for="edit-hobby-sport">Sport</label>
-              <input type="checkbox" name="hobby-sport" id="edit-hobby-sport" value="Sport"/>
-              <label class="form-label" for="edit-hobby-films">Films</label>
-              <input type="checkbox" name="hobby-films" id="edit-hobby-films" value="Films" />
-              <label class="form-label" for="edit-hobby-drowing">Drowing</label>
-              <input type="checkbox" name="hobby-drowing" id="edit-hobby-drowing" value="Drowing" />
-            </div>
+              <div class="form-control">
+                <label class="form-label" for="edit-hobby-sport">Sport</label>
+                <input type="checkbox" name="hobby" id="edit-hobby-sport" value="Sport" />
+                <label class="form-label" for="edit-hobby-films">Films</label>
+                <input type="checkbox" name="hobby" id="edit-hobby-films" value="Films" />
+                <label class="form-label" for="edit-hobby-drowing">Drowing</label>
+                <input type="checkbox" name="hobby" id="edit-hobby-drowing" value="Drowing" />
+              </div>
 
-            <div class="form-control">
-              <label class="form-label" for="edit-country">Country</label>
-              <select name="country" id="edit-country">
-                <option value=""></option>
-                <option value="Ukraine">Ukraine</option>
-                <option value="Poland">Poland</option>
-              </select>
-            </div>
+              <div class="form-control">
+                <label class="form-label" for="edit-country">Country</label>
+                <select name="country" id="edit-country">
+                  <option value=""></option>
+                  <option value="Ukraine">Ukraine</option>
+                  <option value="Poland">Poland</option>
+                </select>
+              </div>
 
-            <div class="form-control">
-              <label class="form-label" for="edit-birthdate">Birthdate</label>
-              <input type="date" name="birthdate" id="edit-birthdate" />
-            </div>
+              <div class="form-control">
+                <label class="form-label" for="edit-birthdate">Birthdate</label>
+                <input type="date" name="birthdate" id="edit-birthdate" />
+              </div>
 
-            <button type="submit" class="edit-confirmation-btn">Save changes</button>
-           </form>
+              <button type="submit" class="edit-confirmation-btn">Save changes</button>
+            </form>
           </div>
         </div>
 
@@ -77,57 +78,29 @@
 
             <div class="form-control">
               <label class="form-label" for="username">Name</label>
-              <input
-                class="form-input"
-                type="text"
-                name="username"
-                id="username"
-                required
-               />
-             
+              <input class="form-input" type="text" name="username" id="username" required
+                data-error-message="Name is not correct!" />
+              <span class="error-text error-text-name"></span>
             </div>
 
             <div class="form-control">
               <label class="form-label" for="email">Email</label>
-              <input
-                class="form-input"
-                type="email"
-                id="email"
-                name="email"
-                placeholder="name@example.com"
-                required
-                pattern="[A-z]+[A-z0-9._%+-]*@[A-z0-9.-]+\.[A-z]{2,4}$"
-                data-error-message="Email is not correct!" />
+              <input class="form-input" type="email" id="email" name="email" placeholder="name@example.com" required
+                pattern="[A-z]+[A-z0-9._%+-]*@[A-z0-9.-]+\.[A-z]{2,4}$" data-error-message="Email is not correct!" />
               <span class="error-text error-text-email"></span>
             </div>
 
             <div class="form-control">
               <label class="form-label" for="password">Password</label>
-              <input
-                class="form-input"
-                type="password"
-                name="password"
-                id="password"
-                required
-                pattern="[0-9]+"
-                minlength="6"
-                maxlength="10"
-                data-error-message="Password is not correct!" />
+              <input class="form-input" type="password" name="password" id="password" required pattern="[0-9]+"
+                minlength="6" maxlength="10" data-error-message="Password is not correct!" />
               <span class="error-text error-text-password"></span>
             </div>
 
             <div class="form-control">
               <label class="form-label" for="password1">Confirm password</label>
-              <input
-                class="form-input"
-                type="password"
-                name="password1"
-                id="password1"
-                required
-                pattern="[0-9]+"
-                minlength="6"
-                maxlength="10"
-                data-error-message="Password is not correct!" />
+              <input class="form-input" type="password" name="password1" id="password1" required pattern="[0-9]+"
+                minlength="6" maxlength="10" data-error-message="Password is not correct!" />
               <span class="error-text error-text-password1"></span>
             </div>
 
@@ -141,29 +114,17 @@
 
             <div class="form-control">
               <label class="form-label" for="email-login">Email</label>
-              <input
-                class="form-input"
-                type="email"
-                id="email-login"
-                name="email1"
-                placeholder="name@example.com"
-                required
-                data-error-message="Email or password is not correct!" />
-                <span class="error-text error-text-login"></span>
+              <input class="form-input" type="email" id="email-login" name="email1" placeholder="name@example.com"
+                required data-error-message="Email or password is not correct!" />
+              <span class="error-text error-text-login"></span>
             </div>
 
             <div class="form-control">
               <label class="form-label" for="password-login">Password</label>
-              <input
-                class="form-input"
-                type="password"
-                name="password-login"
-                id="password-login"
-                required
+              <input class="form-input" type="password" name="password-login" id="password-login" required
                 data-error-message="Email or password is not correct!" />
-                <span class="error-text error-text-login"></span>
+              <span class="error-text error-text-login"></span>
             </div>
-
 
             <input class="submit-button login-submit-button" type="submit" value="Send" />
           </form>
